--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,28 @@
-# Compiled class file
-*.class
+.gradle
+**/build/
+!src/**/build/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-.idea
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
 
-# Maven
-target
-dependency-reduced-pom.xml
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 # Project
 
 TODO.txt
+
+# Editor
+.idea
