--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: '25'
+          distribution: 'temurin'
+          cache: 'maven'
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-      - name: Execute Gradle build
-        run: ./gradlew build
+      - name: Run tests
+        run: mvn -B test
